feat: production readiness, compact JWT claims, Tomcat header limits, Vercel SPA config, and staff/rbac UI fixes